🚧 Partial and incorrect Direct2D drawing
refs #9

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@ if(ENABLE_SKIA)
   include(skia)
 endif()
 
+find_package(wil CONFIG REQUIRED)
+
 set(CONFIG_HPP "${CMAKE_CURRENT_BINARY_DIR}/include/FredEmmott/GUI/config.hpp")
 block()
   set(FUI_ENABLE_SKIA ${ENABLE_SKIA})
