💄 Rename the demo binary to no longer be 'helloskia'
also include supported backends

refs #9

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,18 +22,30 @@ add_subdirectory(xaml-to-fui-statictheme)
 add_subdirectory(FredEmmott)
 
 add_executable(
-  HelloSkia-Win32-Ganesh-D3D12
+  fredemmott-gui-demo
   WIN32
   app.exe.manifest
   main.cpp
 )
 target_link_libraries(
-  HelloSkia-Win32-Ganesh-D3D12
+  fredemmott-gui-demo
   PRIVATE
   fredemmott-gui
 )
 target_include_directories(
-  HelloSkia-Win32-Ganesh-D3D12
+  fredemmott-gui-demo
   PRIVATE
   "${CMAKE_CURRENT_SOURCE_DIR}"
+)
+
+set(NAME fui-demo)
+if (ENABLE_SKIA)
+  string(APPEND NAME "-skia")
+endif()
+if (ENABLE_DIRECT2D)
+  string(APPEND NAME "-direct2d")
+endif()
+set_target_properties(
+  fredemmott-gui-demo
+  PROPERTIES OUTPUT_NAME "${NAME}"
 )
