--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
           - Skia - Release
     name: "${{matrix.preset}}"
     runs-on: windows-latest
+    env:
+      VCPKG_DEFAULT_BINARY_CACHE: ${{github.workspace}}/.vcpkg-binary-cache
     steps:
       - name: Set up visual studio environment
         shell: pwsh
@@ -30,10 +32,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+      - name: Setup vcpkg binary cache
+        uses: actions/cache@v4
+        with:
+          key: ${{matrix.preset}}-${{hashFiles('vcpkg.json')}}
+          path: ${{env.VCPKG_DEFAULT_BINARY_CACHE}}
       - name: Configure
         shell: pwsh
         run: |
-          echo "PATH: ${Env:PATH}"
+          mkdir "${{env.VCPKG_DEFAULT_BINARY_CACHE}}"
           mkdir build
           cd build
           cmake .. --preset "${{matrix.preset}}"
