👷 CMake cleanup to make it more suitable for building as a library
fixes #21

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,33 +19,10 @@ add_library(fredemmott-gui-config INTERFACE)
 target_include_directories(fredemmott-gui-config INTERFACE "${CMAKE_CURRENT_BINARY_DIR}/include")
 
 add_subdirectory(xaml-to-fui-statictheme)
-add_subdirectory(FredEmmott)
 
-add_executable(
-  fredemmott-gui-demo
-  WIN32
-  app.exe.manifest
-  main.cpp
-)
-target_link_libraries(
-  fredemmott-gui-demo
-  PRIVATE
-  fredemmott-gui
-)
-target_include_directories(
-  fredemmott-gui-demo
-  PRIVATE
-  "${CMAKE_CURRENT_SOURCE_DIR}"
-)
+include(lib.cmake)
 
-set(NAME fui-demo)
-if (ENABLE_SKIA)
-  string(APPEND NAME "-skia")
+option(BUILD_DEMO "Build the demo app" ${PROJECT_IS_TOP_LEVEL})
+if (BUILD_DEMO)
+  include(demo.cmake)
 endif()
-if (ENABLE_DIRECT2D)
-  string(APPEND NAME "-direct2d")
-endif()
-set_target_properties(
-  fredemmott-gui-demo
-  PROPERTIES OUTPUT_NAME "${NAME}"
-)
