✨ Add CMake library exports
refs #21
refs #1

This is now usable via vcpkg with a custom overlay; use in HTCC is a work in progress.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,8 @@ if (MSVC)
   )
 endif ()
 
-if (${PROJECT_IS_TOP_LEVEL})
+option(ENABLE_DEVELOPER_OPTIONS "Enable lots of warnings, and warnings-as-errors" "${PROJECT_IS_TOP_LEVEL}")
+if (${ENABLE_DEVELOPER_OPTIONS})
   if (MSVC)
     add_compile_options(
       # Lots of warnings
