📦 Fix ENABLE_SKIA check in exports

--- a/src/exports-config.cmake.in
+++ b/src/exports-config.cmake.in
@@ -3,7 +3,7 @@ include(CMakeFindDependencyMacro)
 find_dependency(yoga CONFIG)
 find_dependency(wil CONFIG)
 
-if (@ENABLE_SKIA)
+if (@ENABLE_SKIA@) # ENABLE_SKIA
   find_dependency(unofficial-skia CONFIG)
 endif()
 
