✨💥 `Add Immediate::Result<...>` fluent return type
replaces `Immediate::Style()`; reason is because in real use, I'm finding this common:

```c++
const auto clicked = fui::Button("Foo");
fui::Style({...});
if (clicked) {
  ...
}
```

This is more concise, and also relies less on implicit state:

```c++
if (fui::Button("Foo").Styled({...})) {
   ...
}
```

fixes #31

--- a/src/FredEmmott/GUI/config.hpp.in
+++ b/src/FredEmmott/GUI/config.hpp.in
@@ -7,6 +7,16 @@
 #cmakedefine FUI_ENABLE_SKIA
 #cmakedefine FUI_ENABLE_DIRECT2D
 
+// See notes on no_unique_address here:
+// https://devblogs.microsoft.com/cppblog/msvc-cpp20-and-the-std-cpp20-switch/
+#if __has_cpp_attribute(msvc::no_unique_address)
+#define FUI_NO_UNIQUE_ADDRESS [[msvc::no_unique_address]]
+#elif __has_cpp_attribute(no_unique_address)
+#define FUI_NO_UNIQUE_ADDRESS [[no_unique_address]]
+#else
+#error "Don't know how to set [[no_unique_address]] on this compiler; ABI incompatibility."
+#endif
+
 namespace FredEmmott::GUI::Config {
 #ifndef NDEBUG
 constexpr bool Debug = true;
