💚 Fix bad config.hpp when building skia-only

--- a/src/FredEmmott/GUI/config.hpp.in
+++ b/src/FredEmmott/GUI/config.hpp.in
@@ -4,8 +4,8 @@
 
 #include <string_view>
 
-#$<IF:$<BOOL:@ENABLE_SKIA@>,define,undef> FUI_ENABLE_SKIA
-#$<IF:$<BOOL:@ENABLE_DIRECT2D>,define,undef> FUI_ENABLE_DIRECT2D
+$<IF:$<BOOL:@ENABLE_SKIA@>,#define,// #undef> FUI_ENABLE_SKIA
+$<IF:$<BOOL:@ENABLE_DIRECT2D@>,#define,// #undef> FUI_ENABLE_DIRECT2D
 
 // See notes on no_unique_address here:
 // https://devblogs.microsoft.com/cppblog/msvc-cpp20-and-the-std-cpp20-switch/
@@ -27,11 +27,12 @@ constexpr bool LibraryDeveloper = $<IF:$<BOOL:@ENABLE_DEVELOPER_OPTIONS@>,true,f
 
 // Allows optimizations
 constexpr auto BackendCount = @BACKEND_COUNT@;
+constexpr bool HaveSkia = $<IF:$<BOOL:@ENABLE_SKIA@>,true,false>;
+
+constexpr auto BackendCount = HaveSkia + HaveDirect2D;
 static_assert(BackendCount > 0, "At least one backend must be enabled");
 constexpr bool HaveSingleBackend = (BackendCount == 1);
 
-constexpr bool HaveSkia = $<IF:$<BOOL:ENABLE_SKIA>,true,false>;
-constexpr bool HaveDirect2D = $<IF:$<BOOL:ENABLE_DIRECT2D>,true,false>;
 
 }// namespace FredEmmott::GUI::Config
 
