--- a/src/FredEmmott/GUI/config.hpp.in
+++ b/src/FredEmmott/GUI/config.hpp.in
@@ -25,14 +25,13 @@ constexpr bool Debug = false;
 #endif
 constexpr bool LibraryDeveloper = $<IF:$<BOOL:@ENABLE_DEVELOPER_OPTIONS@>,true,false>;
 
-// Allows optimizations
-constexpr auto BackendCount = @BACKEND_COUNT@;
 constexpr bool HaveSkia = $<IF:$<BOOL:@ENABLE_SKIA@>,true,false>;
+constexpr bool HaveDirect2D = $<IF:$<BOOL:@ENABLE_DIRECT2D@>,true,false>;
 
 constexpr auto BackendCount = HaveSkia + HaveDirect2D;
 static_assert(BackendCount > 0, "At least one backend must be enabled");
+// Allows optimizations
 constexpr bool HaveSingleBackend = (BackendCount == 1);
-
 
 }// namespace FredEmmott::GUI::Config
 
