🔨 Use fmt::fmt-header-only in xaml-to-fui-statictheme
This removes the runtime dependency when dynamically linking; dynamic linking isn't usually wanted, but might be handy when investing binary sizes.

--- a/src/xaml-to-fui-statictheme/CMakeLists.txt
+++ b/src/xaml-to-fui-statictheme/CMakeLists.txt
@@ -33,7 +33,7 @@ install(TARGETS xaml-to-fui-statictheme)
 target_link_libraries(
   xaml-to-fui-statictheme
   PRIVATE
-  fmt::fmt
+  fmt::fmt-header-only
   unofficial-tinyxml::unofficial-tinyxml
 )
 
