--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         preset:
-          - Debug
+          - Debug - default
           - Debug - clang-cl
           - Release
           - Direct2D - Release
